Fixed import error because of removed parser function, added icon count for each webfont in template, bump to 0.2.1

--- a/icomoon/templates/icomoon/index.html
+++ b/icomoon/templates/icomoon/index.html
@@ -18,7 +18,7 @@
     </div>
     {% else %}
         {% for font_name,font_icons in webfont_store.get_manifests.items %}
-        <h3>{{ font_name }}</h3>
+        <h3>{{ font_name }} ({{ font_icons|length }})</h3>
         <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4 icomoon-icons">
             {% for icon_key,icon_datas in font_icons.items %}
             <li>
