--- a/icomoon/templates/icomoon/icon_map.scss
+++ b/icomoon/templates/icomoon/icon_map.scss
@@ -1,9 +1,9 @@
-{% for icon_name,icon_values in icons.items %}$icon-{{ icon_values.class_name }}: "{{ icon_values.utf8 }}";
+{% for icon_name,icon_values in icons.items %}${{ icon_values.class_name }}: "{{ icon_values.utf8 }}";
 {% endfor %}
 
 @mixin include-icons(){
     {% for icon_name,icon_values in icons.items %}.{{ icon_values.class_name }}::before {
-        content: $icon-{{ icon_values.class_name }};
+        content: ${{ icon_values.class_name }};
     }
     {% endfor %}
 }
