[1.4.0] Project and package refactoring
* Drop 'six' usage;
* Drop 'django-braces' usage;
* Migrate to 'setup.cfg' for package configuration;
* Cover every supported Django versions with tox;
* Updated demo project with sandbox;
* Add documentation on ReadTheDoc;
* Update 'icon_map.scss' template to include a Sass map for available
  icons, close #11;

--- a/icomoon/templates/icomoon/icon_map.scss
+++ b/icomoon/templates/icomoon/icon_map.scss
@@ -1,9 +1,15 @@
 {% for icon_name,icon_values in icons.items %}${{ icon_values.class_name }}: "{{ icon_values.utf8 }}";
 {% endfor %}
 
-@mixin include-icons(){
-    {% for icon_name,icon_values in icons.items %}.{{ icon_values.class_name }}::before {
-        content: ${{ icon_values.class_name }};
-    }
+$icons: (
+    {% for icon_name,icon_values in icons.items %}{{ icon_values.class_name }}: ${{ icon_values.class_name }},
     {% endfor %}
+);
+
+@mixin include-icons(){
+    @each $name, $value in $icons {
+        .#{% templatetag openbrace %}$name{% templatetag closebrace %}::before {
+            content: "#{% templatetag openbrace %}$value{% templatetag closebrace %}";
+        }
+    }
 }
